set user restore in server side
